--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -53,10 +53,10 @@
                     {% block breadcrumbs %}
                     <!-- this will sadly need to be replaced -->
                     <style type="text/css">
-                     #main-feature { background-position: 90% 20%; background-repeat: no-repeat; background-image: url({% static 'images/logo.png' %}); }
+                     #main-feature { background-position: 90% 0%; background-repeat: no-repeat; background-image: url({% static 'images/logo.png' %}); }
                     </style>
 
-                    <hgroup id="main-feature" class="large">
+                    <hgroup id="main-feature">
                         <h1><a href="/" style="text-decoration: none;">{{ current_site.name }}</a></h1>
                         <h2>DEATH FROM ABOVE</h2>
                     </hgroup>
