--- a/board/static/css/metrics-graphics/metricsgraphics.css
+++ b/board/static/css/metrics-graphics/metricsgraphics.css
@@ -37,7 +37,8 @@ a:hover {
 
 .barplot rect.bar {
     shape-rendering: crispEdges;
-    fill: #b6b6fc;
+        fill: #b6b6fc;
+
 }
 
 .barplot rect.bar.active {
@@ -348,7 +349,8 @@ text {
 }
 
 .x-axis-small text,
-.y-axis-small text {
+.y-axis-small text,
+.active-datapoint-small {
     font-size: 8px;
 }
 
