--- a/board/templates/board/service_detail.html
+++ b/board/templates/board/service_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load waffle_tags %}
 {% block page_title_prefix %}{{ service.name }} — {% endblock %}
 {% block page_title_suffix %} — Mozilla{% endblock %}
 
@@ -48,6 +49,7 @@
         {{ start_date|date:"n/j/Y"  }}
     {% endif %}
     </h3>
+    {% flag metrics %}
     <h1 style="margin-top: 50px;"><span style="float: left">System Metrics</span>
         <div style="float: right" class="button-list small text-center modify-time-period-controls">
             <button type="button" class="button active"
@@ -69,6 +71,7 @@
             <div id="metric3"></div>
         </div>
     </div>
+    {% endflag %}
     </div>
     <div id='recent-events' align="left">
         <h2>Recent Events</h2>
