fix bugzilla contact page.

--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -45,7 +45,7 @@
             <br>
             {% block bugzilla %}
             <nav class="menu-bar billboard">
-                <a href="{{ bugzilla_url }}" target="_blank">Have a problem? Report it</a>
+                <a href="/contact" target="_blank">Have a problem? Report it!</a>
             </nav>
             {% endblock %}
         </div>
